# VOIP-Messenger

./: .gitmodules  CMakeLists.txt  README.md
VOIPMessenger/: AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioOutput.h  Controller.cpp  Controller.h  FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetworkerTCP.cpp  NetworkerTCP.h  NetworkerUDP.cpp  NetworkerUDP.h  VOIPMessenger.cpp  VOIPMessenger.h  VoiceCallback.cpp  VoiceCallback.h
